.config: remove aout binary support (comp. error)

--- a/.config
+++ b/.config
@@ -444,8 +444,8 @@ CONFIG_KEXEC=y
 CONFIG_BINFMT_ELF=y
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
 CONFIG_HAVE_AOUT=y
-CONFIG_BINFMT_AOUT=y
-CONFIG_BINFMT_MISC=y
+# CONFIG_BINFMT_AOUT is not set
+# CONFIG_BINFMT_MISC is not set
 
 #
 # Power management options
