--- a/.config
+++ b/.config
@@ -1038,7 +1038,7 @@ CONFIG_USB_S3C2410=y
 # CONFIG_USB_ZERO is not set
 CONFIG_USB_ETH=y
 CONFIG_USB_ETH_RNDIS=y
-CONFIG_USB_ETH_EEM=y
+# CONFIG_USB_ETH_EEM is not set
 # CONFIG_USB_G_NCM is not set
 # CONFIG_USB_GADGETFS is not set
 # CONFIG_USB_FUNCTIONFS is not set
